.vite-dev.err.log
[33mThe CJS build of Vite's Node API is deprecated. See https://vite.dev/guide/troubleshooting.html#vite-cjs-node-api-deprecated for more details.[39m
<anonymous_script>:1
﻿{
^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: C:/Users/mcpar/OneDrive/Documents/GitHub/Jmcparland.github.io): [SyntaxError] Unexpected token '﻿', "﻿{
  "name"... is not valid JSON
SyntaxError: Unexpected token '﻿', "﻿{
  "name"... is not valid JSON
    at JSON.parse (<anonymous>)
    at jsonLoader (file:///C:/Users/mcpar/OneDrive/Documents/GitHub/Jmcparland.github.io/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:25734:41)
    at Object.search (file:///C:/Users/mcpar/OneDrive/Documents/GitHub/Jmcparland.github.io/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:25895:25)]

Node.js v24.13.0
